/*
 * UCF COP3330 Summer 2021 Assignment 5 Solution
 * Copyright 2021 Christopher Velez
 */

package ucf.assignments;

import javafx.event.ActionEvent;
import javafx.fxml.FXML;
import javafx.scene.control.Button;
import javafx.scene.control.TextField;

public class EditItemController {

    @FXML private TextField itemNameTextField;
    @FXML private TextField itemSerialNumberTextField;
    @FXML private TextField itemValueTextField;
    @FXML private Button addNewItemOkButton;
    @FXML private Button addNewItemCancelButton;

    @FXML
    void addNewItemOkButtonPressed(ActionEvent event) {

    }

    @FXML
    void addNewItemCancelButtonPressed(ActionEvent event) {

    }

}
