/*
 * UCF COP3330 Summer 2021 Assignment 5 Solution
 * Copyright 2021 Christopher Velez
 */

package ucf.assignments;

public class ErrorOperator {
//    public boolean checkName(String name) {
//        String message;
//        if(name.length() < 2) {
//            message = "The name of the item must be at least 2 characters long.";
//            return false;
//        } else if(name.length() > 256) {
//            return "The name of the item must be less than 256 characters in length.";
//        }
//        return "No error";
//    }

    public boolean checkSerialNumber(String serialNumber) {
        return false;
    }

    public boolean checkValue(Double value) {
        return false;
    }
}
