/*
 * UCF COP3330 Summer 2021 Assignment 5 Solution
 * Copyright 2021 Christopher Velez
 */

package ucf.assignments;

import javafx.collections.ObservableList;

import java.io.File;

public class FileOperator {
    private String fileName;
    private String filePath;

    public void saveAsTSV(File file, ObservableList<Item> list) {

    }

    public void saveAsHTML(File file, ObservableList<Item> list) {

    }

    public void saveAsJSON(File file, ObservableList<Item> list) {

    }

    public ObservableList<Item> loadFromTSV(File file) {
        return null;
    }

    public ObservableList<Item> loadFromHTML(File file) {
        return null;
    }

    public ObservableList<Item> loadFromJSON(File file) {
        return null;
    }




}
